XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Changed unittests with @expect to fail if the expected exception is 
  caught but a warning is raised
  (friebe, kiesel, ilankin)

Bugfixes
~~~~~~~~
- Changed xml.XPath to throw an exception inside the constructor instead
  of later on when given invalid XML
  (friebe, ilankin)
- Fixed bug to always use forward slashes as directory separator in
  cgen's wsdl subcommand
  (kiesel)
- Changed HttpSession to regenerate session ID before starting a session
  in order to prevent duplicate session creation
  (friebe)
- Ports: Fixed protocol messup when reading messages without content length 
  from STOMP endpoints.
  (friebe)
- Removed unused member field xml.Tree::$dataSource
  (hinckel)

Features
~~~~~~~~
- Added support for alternative syntax in web.ini's [app] section
  (kiesel)
- Ports: Added support for selectors to StompConnection::subscribe()
  (friebe)
- Ports: Added optional headers parameter to StompConnection::send()
  (friebe)
- Added support for rewriting {PROFILE} literals in web.ini
  (kiesel)


Version 5.7.9, released 2010-05-05
----------------------------------
SVN version: 14546

Heads up!
~~~~~~~~~
- Ports: Deprecated com.google.soap.search package, it's been discontinued 
  by Google
  (friebe)

RFCs
~~~~
- Implemented RFC #0201 - XP Overlays
  (friebe)

Bugfixes
~~~~~~~~
- Fixed lang.reflect.Proxy class to not produce fatal errors when passed
  an empty array of interfaces to implement
  (friebe)
- Fixed common stack trace element calculation in lang.ChainedException
  if chained exception is a chained exception itself.
  (friebe)
- Fixed peer.ftp.FtpConnection to be able to cope with FTP servers
  sending an empty directory listing (without "." and "..") for 
  nonexistant directories
  (friebe)