@@ -261,15 +261,33 @@
       $this->_obs && $this->notifyObservers(new DBEvent('queryend', $result));
       return $result;
     }
+
+    /**
+     * Execute any statement
+     *
+     * @param   var* args
+     * @return  rdbms.ResultSet or TRUE if no resultset was created
+     * @throws  rdbms.SQLException
+     */
+    public function open() { 
+      $args= func_get_args();
+      $sql= call_user_func_array(array($this, 'prepare'), $args);
+
+      $this->_obs && $this->notifyObservers(new DBEvent(__FUNCTION__, $sql));
+      $result= $this->query0($sql, FALSE);
+      $this->_obs && $this->notifyObservers(new DBEvent('queryend', $result));
+      return $result;
+    }
     
     /**
      * Execute any statement
      *
      * @param   string sql
+     * @param   bool buffered default TRUE
      * @return  rdbms.ResultSet or TRUE if no resultset was created
      * @throws  rdbms.SQLException
      */
-    protected function query0($sql) {}
+    protected function query0($sql, $buffered= TRUE) {}
     
     /**
      * Begin a transaction
